   * Add elm_object_domain_part_text_translatable_set(), elm_object_item_domain_part_text_translatable_set().
   * Support language,changed callback (Fileselector_Button, Fileselector Entry, Spinner.
   * Add the config elm_scroll_smooth_start_enable.
   * Add elm_layout smart callback - "language,changed".
   * The momentum animation time is changed as the amount of flick.

Improvements:

   * Toolbar widget is now a scrollable widget.
   * Entry widget is now a scrollable layout.
   * Fileselector entry widget is now an elm layout.
   * Ctxpopup widget is now an elm layout.
   * Multibutton entry entry is now an elm layout.
   * Popup widget is now an elm layout.
   * Panel widget is now an elm layout.
   * Improve elm map module loading/searching efficiency.
   * Diskselector handles dyanmic show/hide of icons now like buttons.
   * Plug widget handles image object deletion
   * Handle COMPOUND_TEXT cnp
   * Conformant widget handles displaymode change related with keypad.
   * Conformant widget handles indicator service.
   * Elm_Transit image animation effects supports elm_image object type.
   * Include a main menu in elm_win, which can be exported via D-Bus.
   * Merged the file_entry and the path_entry in the fileselector and allowing typing the path.
   * Setting the same font size of the others widgets for the dayselector.
   * Added a separated spinner for year on calendar.
   * Don't link anymore with E_DBus at build time.
   * Allocate conformant part dummy objects only when the swallow parts are
   existed actually. since these parts are really dependent on the platform,
   in most case they don't need all parts at the same time.
   * Enhanced diskselector add and item_append time.
   * Expand elm_transit_tween_mode ELM_TRANSIT_TWEEN_MODE_DIVISOR_INTERP, ELM_TRANSIT_TWEEN_MODE_BOUNCE, ELM_TRANSIT_TWEEN_MODE_SPRING
   * Ctxpopup will be dismissed when language is changed.
   * Popup is now a focusable object.